--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,15 @@ docs/_build/
 # PyBuilder
 target/
 
+### VirtualEnv template
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+
+### Output images
+*.png
